--- a/home.css
+++ b/home.css
@@ -2,16 +2,54 @@ body{
     margin:0px;
     background-color:aliceblue;
 }
+.changemode{
+    background-color:pink;
+}
+.changemode #types{
+    background-color:pink;
+}
+
+.mode{
+    font-size:100px;
+    float:right;
+    position:relative;
+    top: 122px;
+    left: -32px;
+    cursor: pointer;
+}
+.main{
+    height:100%;
+    width:100%;
+}
+#coupon{
+    height: 350px;
+    width: 700px;
+    position: absolute;
+    margin-left: 28%;
+    margin-top: -112%;
+    background-color: transparent;
+    visibility:hidden;
+    z-index:100
+}
+button{
+    position:relative;
+    left:8px;
+    top: -7px;
+}
 /*header*/
 header{
     height: 100px;
     /* border: 5px solid hotpink; */
 }
-#user{
-    text-align:center;
-    float:left;
+
+.user{
+    font-size:50px;
+}
+.logo{
+    float:right;
+    font-size:30px;
     margin-top:1%;
-    position:absolute;
+    margin-left:1%;
 }
 /*search bar section*/
 #search{
@@ -90,7 +128,6 @@ header{
     height:50px;
     width:50px;
     border-radius:50%;
-    /* margin:1%;  */
     position:relative;
     top:10px;
     left:5px
@@ -99,7 +136,6 @@ header{
     width:100%;
     position:relative;
     top:25px;
-    /* left:-50px; */
 }
 .span{
     width:100%;
@@ -147,10 +183,11 @@ header{
     font-weight:bold;
     display:inline-block;
     margin-bottom:2%;
-    margin-top: 15%;
+    margin-top: 2%;
 }
 #heading{
     width:100%;
+    float:left;
 }
 .block{
     height:250px;
@@ -190,7 +227,7 @@ footer{
     width:15%;
     /* border:5px solid red; */
     margin-left:9%;
-    margin-top:2%;
+    margin-top:15%;
     float:left;
 }
 #footemail{
@@ -403,5 +440,33 @@ footer{
     }
     #rights{
         margin-top:23%;
+    }
+}
+.video{
+    width:100%;
+    height:100%;
+    position:relative;
+    left:-8px;
+    top: -9px;
+}
+.bar{
+    margin-top:0.5;
+    float:right;
+    height:10px;
+    width:400px;
+    border:5px solid red;
+    background:linear-gradient(90deg,orange,red,yellow,green,red);
+    animation:bar 10s infinite;
+    background-size:200%;
+    position:relative;
+    left:-700px;
+    top:6px;
+}
+@keyframes bar{
+    0%{
+        background-position:0 0;
+    }
+    100%{
+        background-position:200% 0;
     }
 }
