--- a/home.css
+++ b/home.css
@@ -274,13 +274,106 @@ footer{
         margin-bottom:0%;
     }
 }
-@media screen and (max-width:1331px){
+@media screen and (max-width:1471px){
     .cat{
         margin-left:6%;
         margin-bottom:2%;
     }
     #sales{
-        margin-top:17%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    #coupon{
+        margin-top: -125%;
+        margin-left: 23%;
+    }
+}
+@media screen and (max-width:1400px){
+    .cat{
+        margin-left:6%;
+        margin-bottom:2%;
+    }
+    #sales{
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:2%;
+    }
+    #coupon{
+        margin-top: -133%;
+        margin-left: 23%;
+    }
+}
+@media screen and (max-width:1348px){
+    .cat{
+        margin-left:6%;
+        margin-bottom:2%;
+    }
+    #sales{
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:3%;
+    }
+    #coupon{
+        margin-top: -165%;
+        margin-left: 23%;
+    }
+}
+@media screen and (max-width:1336px){
+    .cat{
+        margin-left:6%;
+        margin-bottom:2%;
+    }
+    #sales{
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:4%;
+    }
+    #coupon{
+        margin-top: -165%;
+        margin-left: 23%;
+    }
+}
+@media screen and (max-width:1332px){
+    .cat{
+        margin-left:6%;
+        margin-bottom:2%;
+    }
+    #sales{
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:4%;
+    }
+    #coupon{
+        margin-top: -165%;
+        margin-left: 23%;
     }
 }
 @media screen and (max-width:1300px){
@@ -289,7 +382,19 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:18%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:5%;
+    }
+    #coupon{
+        margin-top: -165%;
+        margin-left: 23%;
     }
 }
 @media screen and (max-width:1227px){
@@ -298,7 +403,19 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:18%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:6%;
+    }
+    #coupon{
+        margin-top: -165%;
+        margin-left: 23%;
     }
 }
 @media screen and (max-width:1079px){
@@ -307,7 +424,19 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:21%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:8%;
+    }
+    #coupon{
+        margin-top: -201%;
+        margin-left: 13%;
     }
 }
 @media screen and (max-width:1060px){
@@ -316,7 +445,19 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:21%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:8%;
+    }
+    #coupon{
+        margin-top: -201%;
+        margin-left: 13%;
     }
 }
 @media screen and (max-width:1024px){
@@ -325,7 +466,19 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:22%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:50%
+    }
+    footer{
+        margin-top:8%;
+    }
+    #coupon{
+        margin-top: -201%;
+        margin-left: 13%;
     }
 }
 @media screen and (max-width:1010px){
@@ -334,7 +487,19 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:22%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:23%
+    }
+    footer{
+        margin-top:9%;
+    }
+    #coupon{
+        margin-top: -211%;
+        margin-left: 13%;
     }
 }
 @media screen and (max-width:984px){
@@ -343,7 +508,47 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:23%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:20%
+    }
+    footer{
+        margin-top:10%;
+    }
+    #coupon{
+        margin-top: -270%;
+        margin-left: 14%;
+    }
+}
+@media screen and (max-width:970px){
+    .cat{
+        margin-left:6%;
+        margin-bottom:2%;
+    }
+    #sales{
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:20%
+    }
+    footer{
+        margin-top:10%;
+    }
+    #coupon{
+        margin-top: -220%;
+        margin-left: 14%;
+    }
+}
+
+@media screen and (max-width:868){
+    #coupon{
+        margin-top:-270%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:850px){
@@ -352,7 +557,19 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:26%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:3%
+    }
+    footer{
+        margin-top:12%;
+    }
+    #coupon{
+        margin-top:-280%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:815px){
@@ -361,16 +578,37 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:28%;
+        margin-top:3%;
+        margin-left:3%;
+    }
+    .bar{
+        position:relative;
+        margin-left:3%
+    }
+    footer{
+        margin-top:14%;
+    }
+    #coupon{
+        margin-top:-300%;
+        margin-left:0%;
     }
 }
+
 @media screen and (max-width:800px){
     .cat{
         margin-left:6%;
         margin-bottom:2%;
     }
     #sales{
-        margin-top:30%;
+        margin-top: 5%;
+        margin-left: 10%;
+    }
+    footer{
+        margin-top:16%;
+    }
+    #coupon{
+        margin-top:-304%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:730px){
@@ -379,7 +617,15 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:31%;
+        margin-top: 5%;
+        margin-left: 10%;
+    }
+    footer{
+        margin-top:20%;
+    }
+    #coupon{
+        margin-top:-340%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:616px){
@@ -388,7 +634,39 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:36%;
+        margin-top: 5%;
+        margin-left: 10%;
+    }
+    footer{
+        margin-top:22%;
+    }
+    #coupon{
+        margin-top:-383%;
+        margin-left:0%;
+    }
+}
+@media screen and (max-width:600px){
+    .cat{
+        margin-left:6%;
+        margin-bottom:3%;
+    }
+    #sales{
+        margin-top: 3%;
+        margin-left: 19%;
+    }
+    #rights{
+        margin-top:23%;
+    }
+    #coupon{
+        margin-top:-650%;
+        margin-left:0%;
+    }
+    footer{
+        margin-top:22%;
+    }
+    #coupon{
+        margin-top:-580%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:580px){
@@ -397,7 +675,15 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:38%;
+        margin-top: 5%;
+        margin-left: 10%;
+    }
+    footer{
+        margin-top:22%;
+    }
+    #coupon{
+        margin-top:-600%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:578px){
@@ -406,7 +692,15 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:38%;
+        margin-top: 6%;
+        margin-left: 10%;
+    }
+    footer{
+        margin-top:22%;
+    }
+    #coupon{
+        margin-top:-620%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:564px){
@@ -415,10 +709,18 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:38%;
+        margin-top: 4%;
+        margin-left: 10%;
     }
     #rights{
         margin-top:20%;
+    }
+    footer{
+        margin-top:22%;
+    }
+    #coupon{
+        margin-top:-608%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:548px){
@@ -427,7 +729,15 @@ footer{
         margin-bottom:2%;
     }
     #sales{
-        margin-top:39%;
+        margin-left: 10%;
+        margin-top: 7%;
+    }
+    footer{
+        margin-top:22%;
+    }
+    #coupon{
+        margin-top:-633%;
+        margin-left:0%;
     }
 }
 @media screen and (max-width:500px){
@@ -436,10 +746,18 @@ footer{
         margin-bottom:3%;
     }
     #sales{
-        margin-top:44%;
+        margin-top: 3%;
+        margin-left: 19%;
     }
     #rights{
         margin-top:23%;
+    }
+    #coupon{
+        margin-top:-684%;
+        margin-left:0%;
+    }
+    footer{
+        margin-top:31%;
     }
 }
 .video{
@@ -459,8 +777,8 @@ footer{
     animation:bar 10s infinite;
     background-size:200%;
     position:relative;
-    left:-700px;
-    top:6px;
+    left:-46%;
+    top:0%;
 }
 @keyframes bar{
     0%{
