--- a/home.css
+++ b/home.css
@@ -1,5 +1,9 @@
 body{
-    z-index:1;
+    text-decoration:none;
+}
+a {
+    color: black;
+    text-decoration: none;
 }
 .mode{
     background-color:black;
@@ -126,6 +130,8 @@ b{
     font-weight:bold;
     font-size:20px;
     margin-top:-4px;
+    color:black;
+    text-decoration:none;
 }
 .mode .location{
     background-color: #41a180;
